--- a/index.html
+++ b/index.html
@@ -54,14 +54,8 @@
         </svg>
 
         <select>
-          <option value="en">
-            EN
-            <img src="img/british.svg" alt="" />
-          </option>
-          <option value="fr">
-            FR
-            <img src="img/france flag.jpg" alt="" />
-          </option>
+          <option value="en">EN</option>
+          <option value="fr">FR</option>
         </select>
       </div>
     </header>
@@ -149,9 +143,7 @@
           <label for="msg" data-i18="form_msg">Message :</label>
           <textarea name="message" id="msg" required></textarea>
         </div>
-        <button type="submit" id="submit-btn" data-i18="form_submit">
-          Submit
-        </button>
+        <button type="submit" id="submit-btn">Submit</button>
       </form>
     </section>
 
