--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
           <label for="msg" data-i18="form_msg">Message :</label>
           <textarea name="message" id="msg" required></textarea>
         </div>
-        <button type="submit" id="submit-btn">Submit</button>
+        <button type="submit" id="submit-btn" data-i18="form_submit">
+          Submit
+        </button>
       </form>
     </section>
 
