--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       </a>
 
       <ul class="social_menu">
-        <li><a href="#Home" data-i18="home">Home</a></li>
-        <li><a href="#about" data-i18="about">About Us</a></li>
-        <li><a href="#service" data-i18="services">Services</a></li>
-        <li><a href="#contact" data-i18="contact">Contact</a></li>
+        <li><a href="#Home" data-i18="home" id="link">Home</a></li>
+        <li><a href="#about" data-i18="about" id="link">About Us</a></li>
+        <li><a href="#service" data-i18="services" id="link">Services</a></li>
+        <li><a href="#contact" data-i18="contact" id="link">Contact</a></li>
       </ul>
       <div class="mode_icons">
         <svg
@@ -42,21 +42,27 @@
             clip-rule="evenodd" />
         </svg>
 
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 20 20"
-          fill="currentColor"
-          id="menu-icon">
-          <path
-            fill-rule="evenodd"
-            d="M2 4.75A.75.75 0 0 1 2.75 4h14.5a.75.75 0 0 1 0 1.5H2.75A.75.75 0 0 1 2 4.75ZM2 10a.75.75 0 0 1 .75-.75h14.5a.75.75 0 0 1 0 1.5H2.75A.75.75 0 0 1 2 10Zm0 5.25a.75.75 0 0 1 .75-.75h14.5a.75.75 0 0 1 0 1.5H2.75a.75.75 0 0 1-.75-.75Z"
-            clip-rule="evenodd" />
-        </svg>
-
         <select>
           <option value="en">EN</option>
           <option value="fr">FR</option>
         </select>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+          id="menu-icon"
+          data-darkreader-inline-fill="">
+          <path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path>
+        </svg>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+          id="clear-icon"
+          data-darkreader-inline-fill="">
+          <path
+            d="m16.192 6.344-4.243 4.242-4.242-4.242-1.414 1.414L10.535 12l-4.242 4.242 1.414 1.414 4.242-4.242 4.243 4.242 1.414-1.414L13.364 12l4.242-4.242z"></path>
+        </svg>
       </div>
     </header>
 
