add some responsive

--- a/index.html
+++ b/index.html
@@ -48,21 +48,35 @@
         </select>
         <svg
           xmlns="http://www.w3.org/2000/svg"
+          fill="none"
           viewBox="0 0 24 24"
-          fill="currentColor"
-          id="menu-icon"
-          data-darkreader-inline-fill="">
-          <path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path>
-        </svg>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-          fill="currentColor"
-          id="clear-icon"
-          data-darkreader-inline-fill="">
+          stroke-width="1.5"
+          stroke="currentColor"
+          id="menu-icon">
           <path
-            d="m16.192 6.344-4.243 4.242-4.242-4.242-1.414 1.414L10.535 12l-4.242 4.242 1.414 1.414 4.242-4.242 4.243 4.242 1.414-1.414L13.364 12l4.242-4.242z"></path>
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
+      </div>
+
+      <div class="menu">
+        <button>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            id="clear-icon">
+            <path
+              d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94 6.28 5.22Z" />
+          </svg>
+        </button>
+        <ul>
+          <li><a href="#Home" data-i18="home" id="link">Home</a></li>
+          <li><a href="#about" data-i18="about" id="link">About Us</a></li>
+          <li><a href="#service" data-i18="services" id="link">Services</a></li>
+          <li><a href="#contact" data-i18="contact" id="link">Contact</a></li>
+        </ul>
       </div>
     </header>
 
@@ -158,8 +172,8 @@
     <footer>
       <p data-i18="footer">All rights reserved</p>
       <p>
-        &copy; 2024
         <img src="img/tooth.png" alt="logo" />
+        &copy; 2024
       </p>
     </footer>
 
