add some active links

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       </a>
 
       <ul class="social_menu">
-        <li><a href="#Home" data-i18="home" id="link">Home</a></li>
+        <li>
+          <a class="active" href="#Home" data-i18="home" id="link">Home</a>
+        </li>
         <li><a href="#about" data-i18="about" id="link">About Us</a></li>
         <li><a href="#service" data-i18="services" id="link">Services</a></li>
         <li><a href="#contact" data-i18="contact" id="link">Contact</a></li>
@@ -72,7 +74,9 @@
           </svg>
         </button>
         <ul>
-          <li><a href="#Home" data-i18="home" id="link">Home</a></li>
+          <li>
+            <a href="#Home" data-i18="home" id="link">Home</a>
+          </li>
           <li><a href="#about" data-i18="about" id="link">About Us</a></li>
           <li><a href="#service" data-i18="services" id="link">Services</a></li>
           <li><a href="#contact" data-i18="contact" id="link">Contact</a></li>
