--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <p data-i18="footer">All rights reserved</p>
       <p>
         <img src="img/tooth.png" alt="logo" />
-        &copy; 2024
+        &copy; <span id="date-id"></span>
       </p>
     </footer>
 
