--- a/index.html
+++ b/index.html
@@ -92,12 +92,13 @@
         data-i18="hero_heading">
         Welcome to our lab, the best place to make your teeth look great.
       </h1>
-      <img
-        data-aos="fade-left"
-        data-aos-duration="2000"
-        src="img/dentist.jpg"
-        alt="dentist"
-        loading="lazy" />
+      <picture>
+        <div
+          class="img"
+          data-aos="fade-left"
+          data-aos-duration="2000"
+          loading="lazy"></div>
+      </picture>
     </section>
 
     <section class="about" id="about">
@@ -112,14 +113,16 @@
           we can help you achieve a healthy, beautiful smile.
         </p>
       </div>
-      <img
-        data-aos="flip-left"
-        data-aos-duration="2000"
-        src="img/chair.jpg"
-        alt="chair"
-        loading="lazy" />
+      <picture>
+        <div
+          class="chair-img"
+          data-aos="flip-left"
+          data-aos-duration="2000"
+          loading="lazy"></div>
+      </picture>
     </section>
 
+    <!--services-->
     <section class="service" id="service">
       <div data-aos="zoom-in-up" data-aos-duration="2000">
         <h2 data-i18="service_title">Our services</h2>
